--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 .App {
   min-height: 100vh;
-}
-
-.App main {
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
   height: 100vh;
@@ -13,8 +10,12 @@
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.App main::-webkit-scrollbar {
+.App::-webkit-scrollbar {
   display: none;
+}
+
+.App main {
+  /* Properties moved to .App */
 }
 
 .dynamic-bg {
